hotfix: Fix layout spacing on Safari

--- a/app/src/components/layout/index.scss
+++ b/app/src/components/layout/index.scss
@@ -3,9 +3,12 @@
 html,
 body,
 body,
-#___gatsby,
-#___gatsby > div {
+#___gatsby {
   height: 100%;
+}
+
+#___gatsby > div {
+  min-height: 100%;
 }
 
 #___gatsby > div {
